Fix fajita ingredient list

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -25,6 +25,7 @@
                 <li>1 jalapeno pepper</li>
                 <li>1 large avocado</li>
                 <li>1 lime</li>
+                <li>1 bundle of cilantro</li>
                 <li>sour cream</li>
                 <li>4-8 8" flour tortillas</li>
                 <li>bottle of vegetable oil</li>
