Add a recipe and image for the rice bowl

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <p><a href="./recipes/fajitas.html">Fajitas</a></p>
+        <p><a href="./recipes/rice-bowl.html">Rice Bowl</a></p>
     </body>
 </html>
 
