Add an image and recipe for a PB&B Sandwich

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Odin Recipes</h1>
         <p><a href="./recipes/fajitas.html">Fajitas</a></p>
         <p><a href="./recipes/rice-bowl.html">Rice Bowl</a></p>
+        <p><a href="./recipes/pb-banana-sandwich.html">Peanut Butter and Banana Sandwich</a></p>
     </body>
 </html>
 
