Add image to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <img src="./images/laptop-and-produce.webp" alt="person typing on a laptop with food on the table"
+            width="800px"
+            height="auto">
+
         <p><a href="./recipes/fajitas.html">Fajitas</a></p>
         <p><a href="./recipes/rice-bowl.html">Rice Bowl</a></p>
         <p><a href="./recipes/pb-banana-sandwich.html">Peanut Butter and Banana Sandwich</a></p>
